# EsencIA

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_import.json
.planning/: DISENO-SECCION-DATOS-ENTRADA.md
app/: main.py
app/application/use_cases/: benchmark_use_case.py  generate_text_use_case.py  parse_use_case.py  pipeline_use_case.py  verify_use_case.py
app/config/: __init__.py  settings.py
app/domain/model/entities/: benchmark.py  generation.py  parsing.py  pipeline.py  progress.py  verification.py
app/domain/services/: benchmark_service.py  generate_service.py  parse_service.py  pipeline_service.py  verifier_service.py
app/infrastructure/: file_repository.py  system_resources.py
config/pipeline/: pipeline_config.json  test_pipeline_config.json
docs/: Memoria - TFG.DOCX  analisis-gui-rendimiento.md
gui/: main.py
prompts/completed/: 001-analisis-gui-rendimiento-ux.md  001-pipeline-gui-ux-improvements.md
src/: main.py
src/application/use_cases/: benchmark_use_case.py  generate_text_use_case.py  parse_use_case.py  pipeline_use_case.py  verify_use_case.py
src/domain/model/entities/: benchmark.py  generation.py  parsing.py  pipeline.py  verification.py
src/domain/services/: benchmark_service.py  generate_service.py  parse_service.py  pipeline_service.py  verifier_service.py
src/infrastructure/: file_repository.py
src/utils/: json_utils.py
tests/: README.md  conftest.py
tests/unit/: test_main.py
tests/unit/infrastructure/: test_file_repository.py  test_system_resources.py
(+17 files in other folders)
