[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EsencIA"
version = "1.0.0"
description = "A CLI-based text processing pipeline for generating, parsing, and verifying text with an LLM."
authors = [
    {name = "Joan Casanova", email = "juancasanovaferrer@gmail.com"}
]
keywords = ["llm", "text-generation", "nlp", "cli", "parsing"]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.46.3",
    "argparse",
    "sacremoses>=0.1.1",
    "huggingface-hub>=0.26.2",
    "tokenizers>=0.20.3",
    "nicegui>=3.3.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
    "python-dateutil>=2.8.0",
    "compressed-tensors>=0.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/joancasanova/EsencIA" 

[tool.setuptools.packages.find]
where = ["."]
